# portfolio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: vercel-cd.yml
blog/: book.toml
blog/src/: SUMMARY.md  flutter_web_deployment_azure.md  rust_web_dioxus.md  vim_math3d_cpp.md
builder/: Cargo.toml
builder/src/: gen_lib.rs  main.rs  rsx.rs  transform_book.rs
profile/: Cargo.toml  Dioxus.toml  tailwind.config.js  vercel.json
profile/assets/: gtag.js  tailwind.css
profile/src/: icons.rs  main.rs
profile/src/components/: blog.rs  card.rs  code.rs  footer.rs  gallery.rs  list.rs  mod.rs  navbar.rs  profile.rs  section.rs  subscribe.rs  testimonial.rs  timeline.rs
profile/src/dioxus_spring/: spring.rs  use_spring.rs  use_spring_ref.rs  use_spring_signal.rs
profile/src/docs/: mod.rs  router_articles.rs
profile/src/views/: blog.rs  home.rs  mod.rs  scaffold.rs
