[package]
name = "builder"
version = "0.1.0"
authors = ["Dima Kravchyna <dmk-rib@users.noreply.github.com>"]
edition = "2021"

[dependencies]
syntect-html = { git = "https://github.com/dioxuslabs/include_mdbook", branch = "jk/build-gen" }
mdbook-shared = { git = "https://github.com/dioxuslabs/include_mdbook", branch = "jk/build-gen" }
# use-mdbook = { git = "https://github.com/dioxuslabs/include_mdbook", branch = "jk/build-gen" }

proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = "2.0"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
macro_state = "0.2.0"
convert_case = "0.6.0"
postcard = { version = "1.0.4", features = ["use-std"] }
pulldown-cmark = "0.9.3"
syntect = { version = "5.2.0", features = ["plist-load"] }
dioxus-rsx = { version = "0.6.0" }
dioxus-autofmt = { version = "0.6.0" }
prettyplease = "0.2.20"
once_cell = "1.20.2"

[features]
default = ["manganis"]
manganis = []
